# mcp-google-contacts-server

./: .dockerignore  Dockerfile  REVISIONS.md  pyproject.toml  requirements.txt
mcp_google_contacts_server/: auth.py  config.py  google_contacts_service.py  main.py  tools.py
tests/: test_auth.py
