[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-google-contacts-server"
version = "0.1.1"
description = "MCP server for Google Contacts integration"
readme = "README.md"
authors = [
    {name = "Rayan Zaki", email = "rayan.hassici@ensia.edu.dz"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4,<4",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/rayanzaki/mcp-google-contacts-server"
"Bug Tracker" = "https://github.com/rayanzaki/mcp-google-contacts-server/issues"

[tool.setuptools]
packages = ["mcp_google_contacts_server"]

[project.scripts]
mcp-google-contacts = "mcp_google_contacts_server.main:main"
